--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.4.1",
-    "react-native": "0.56.0"
+    "react-native": "0.56.0",
+    "react-native-modals": "^0.19.9"
   },
   "devDependencies": {
     "babel-jest": "23.4.0",
