--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "jetifier": "^1.6.4",
     "react": "16.4.1",
     "react-native": "0.56.0",
-    "react-native-modals": "^0.19.9"
+    "react-native-gesture-handler": "^1.0.12",
+    "react-native-modals": "^0.19.9",
+    "react-native-paper": "^3.2.1",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.0.10",
+    "react-navigation-material-bottom-tabs": "^2.1.5"
   },
   "devDependencies": {
     "babel-jest": "23.4.0",
