--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/core": "^7.7.2",
     "jetifier": "^1.6.4",
     "react": "16.4.1",
     "react-native": "0.56.0",
@@ -18,7 +19,9 @@
     "react-navigation-material-bottom-tabs": "^2.1.5"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-jest": "23.4.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react-native": "^5",
     "jest": "23.4.1",
     "react-test-renderer": "16.4.1"
